# enum-cmake

./: .gitignore  CMakeLists.txt
